# llq

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.sh  compile_commands.json  dummy_log.json  log.json  log2.json  vcpkg.json
src/: bitset.h  expr.h  ingestor.h  lib.h  logProducerBin.cpp  logging.h  main.cpp  parser.h  query_service.h  test_main.cpp  types.h  ui.h
src/utils/: read_file_backwards.h  string_utils.h
